--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/ARJITMALIK/marcdown/issues"
   },
-  "homepage": "https://github.com/ARJITMALIK/marcdown#readme"
+  "homepage": "https://github.com/ARJITMALIK/marcdown#readme",
+  "devDependencies": {
+    "@types/node": "^17.0.39",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
+  }
 }
