--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A live markdown editor",
   "main": "index.js",
   "scripts": {
-    "test": "node ."
+    "start": "node server/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc -p ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,8 @@
   "devDependencies": {
     "@types/node": "^17.0.39",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
