--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/ARJITMALIK/marcdown#readme",
   "devDependencies": {
     "@types/node": "^17.0.39",
-    "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
