--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "marcdown",
   "version": "1.0.0",
   "description": "A live markdown editor",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "node server/server.js",
     "dev": "nodemon src/server.ts",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ARJITMALIK/marcdown#readme",
   "devDependencies": {
     "@types/node": "^17.0.39",
+    "electron": "^19.0.3",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
