--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
   "main": "./src/index.tsx",
   "repository": "git@github.com:ARJITMALIK/marcdown.git",
   "author": "ARJITMALIK <arjitmalik2001@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "tsc": "^2.0.4",
+    "typescript": "^4.8.3"
+  }
 }
