--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:ARJITMALIK/marcdown.git",
   "author": "ARJITMALIK <arjitmalik2001@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack serve --config webpack/webpack.config.js --open"
+  },
   "dependencies": {
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
